# fouriax

./: .cruft.json  .gitattributes  .gitignore  .pre-commit-config.yaml  .travis.yml  AUTHORS.rst  CONTRIBUTING.rst  HISTORY.rst  LICENCE  LICENCE.rej  LICENSE  Makefile  README.md  mkdocs.yml  mkdocs.yml.rej  pyproject.toml  pyproject.toml.rej  requirements_dev.txt  setup.cfg  setup.py  tox.ini
.github/: ISSUE_TEMPLATE.md
.github/actions/python-poetry-env/: publish.yml
.github/workflows/: cookiecutter.yml  cookiecutter.yml.rej  dependencies.yml  dependencies.yml.rej  draft_release.yml  draft_release.yml.rej  release.yml  release.yml.rej  test.yml  test.yml.rej
docs/: api_docs.md
fouriax/: perceptual.py  time.py
src/fouriax/: __init__.py  freq.py  perceptual.py  pvc.py  stft.py  time.py
tests/: __init__.py  test_freq.py  test_perceptual.py  test_pvc.py  test_time.py
